# blueprintiq

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  mlflow.db  pyproject.toml
blueprintiq/: cli.py
blueprintiq/config/: default.yaml
blueprintiq/data_gen/: generate_sheets.py
blueprintiq/datasets/: coco_detection_dataset.py  test_dataset.py  viz_coco_sample.py
blueprintiq/inference/: batch_predict.py  predict.py
blueprintiq/models/: detector.py  test_detector.py
blueprintiq/monitoring/: logger.py  summarize.py
blueprintiq/service/: app.py  model.py
blueprintiq/training/: eval_detector.py  eval_utils.py  train_detector.py  utils.py  viz_predictions.py
data/synth_v0/: coco_title_block.json
mlruns/1/99cbfb05a59446808761f415837ef9f5/artifacts/: config.yaml
runs/20260303T221053Z/: meta.json
